# maf_bayesian

./: .gitignore  DEBUGGING_NOTES.md  GP_simulation_design.xlsx  MAF_gp_hv.ipynb  MAF_gp_hv.py  README.md  analyze.py  analyze_residuals.py  compare_data.py  debug_sigma_plots.py  maf_gp.py  main.py  output.txt  post_no_bias.py  posterior_bias_E1.ipynb  posterior_bias_E1.py  posterior_bias_alpha.py  posterior_no_bias.ipynb  posterior_no_bias.py  pyproject.toml  requirements.txt
.agent/rules/: roles.md  (+4 more)
archive/: MAF_gp_hv.ipynb  main.py  posterior_bias_E1.py  posterior_bias_alpha.ipynb  posterior_no_bias.ipynb
configs/: default_config.py
docs/: CODE_DESCRIPTION.html  CODE_DESCRIPTION.qmd  _quarto.yml  data_format_evaluation.html  data_format_evaluation.qmd  data_provenance.md  direction_specific_emulator.qmd  empirical_model.qmd  gp_hyperparameter_analysis.qmd  index.qmd  legacy_notes.qmd  model_analysis.html  model_analysis.qmd  posterior_method_explanation.qmd  prediction_methodology.qmd  prior_prediction_issue.qmd  residual_analysis.qmd  statistical_modeling_analysis.html  statistical_modeling_analysis.qmd
experimental_data/: SA_results.py  data_extension_exp_45_h_2.txt  data_extension_exp_45_v_3.txt  data_extension_exp_90_v_1.txt  experimental_data_plot.py  input_load_angle_exp_90_v_1.txt  main.m
figures/: inference_hyper_stats_20251204_1357.csv  inference_n_stats.csv  inference_theta_stats.csv  inference_theta_stats_20251204_1354.csv
figures_bias_E1/: inference_b_linear_bias_E1.emf  inference_hyper_linear_bias_E1_stats.csv  inference_theta_linear_bias_E1.emf  (+10 more)
(+491 files in other folders)
