[project]
name = "maf-bayesian-main"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datetime>=5.5",
    "h5py>=3.14.0",
    "jax>=0.7.2",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "numpyro>=0.19.0",
    "pathlib>=1.0.1",
]
