[project]
name = "maf-bayesian-main"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datetime>=5.5",
    "h5py>=3.14.0",
    "jax>=0.7.2",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "numpyro>=0.19.0",
    "pandas>=2.3.3",
    "pathlib>=1.0.1",
    "psycopg2-binary>=2.9.11",
    "pyhelpers>=1.3.1",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
    "psycopg2-binary>=2.9.11",
    "sqlalchemy>=2.0.44",
    "shapely>=2.1.2",
    "pyproj>=3.7.2",
    "requests>=2.32.5",
    "openpyxl>=3.1.5",
    "pyhelpers>=2.3.1",
]


